--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -146,7 +146,7 @@
               </div>
               <br />
               <!-- esta opção só aparece para as camaras -->
-              <section id="opcao1">
+              <section id="opcao1Camaras">
                 <div style="background-color: #8f9dc3">
                   <li class="nav-item">
                     <a
@@ -161,57 +161,62 @@
                     </a>
                   </li>
                 </div>
+                <br />
+              </section>
+              <!-- esta opção só aparece para as instituições -->
+              <section id="opcao1Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Calendário de atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
               </section>
               <!-- esta opção só aparece para as camaras -->
-              <br />
-              <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Calendário de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao2Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Calendário de atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Calendário de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
-              <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Materiais de referência
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao3Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Materiais de referência
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
@@ -229,37 +234,42 @@
               </div>
               <br />
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-handshake"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Parceiros
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao2Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon fas fa-handshake"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Parceiros
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-comment-dots"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Sugestões
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao3Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon fas fa-comment-dots"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Sugestões
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+              
               <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
@@ -283,8 +293,9 @@
                     href="/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html"
                     class="nav-link"
                   >
-                    <i class="nav-icon fas fa-house-user"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
+                  <i class="nav-icon fas fa-house-user"></i>
+                    
+                    <p style="padding-top: 10px; padding-bottom: 10px" >
                       Logout
                       <!-- <span class="right badge badge-danger">New</span> -->
                     </p>
@@ -338,6 +349,7 @@
                   <!-- se for instituição vai para ../pages/calendar -->
                   <!-- se for camara vai para ../pages/calendar_camaras -->
                   <a
+                  id="linkCamaras"
                     href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
                     class="small-box-footer"
                     >Ver mais <i class="fas fa-arrow-circle-right"></i
@@ -359,6 +371,7 @@
                   <!-- se for instituição vai para ../pages/calendar -->
                   <!-- se for camara vai para ../pages/calendar_camaras -->
                   <a
+                  id="link2Camaras"
                     href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
                     class="small-box-footer"
                     >Ver mais <i class="fas fa-arrow-circle-right"></i
@@ -511,7 +524,7 @@
                       <div class="col-md-8">
                         <p class="text-center">
                           <strong
-                            >Adesão por parte das crianças às atividades</strong
+                            >Número total de atividades</strong
                           >
                         </p>
 
@@ -1152,13 +1165,10 @@
 
       <footer class="main-footer">
         <strong
-          >Copyright &copy; 2014-2020
-          <a href="https://adminlte.io">AdminLTE.io</a>.</strong
-        >
-        All rights reserved.
-        <div class="float-right d-none d-sm-inline-block">
-          <b>Version</b> 3.1.0-rc
-        </div>
+          >Copyright &copy;
+          <a href="http://prochildcolab.pt/">ProChild</a></strong
+        >.
+        Todos os direitos reservados.
       </footer>
 
       <!-- Control Sidebar -->
@@ -1206,6 +1216,8 @@
     <script src="dist/js/pages/dashboard2.js"></script>
     <!-- Controllers -->
     <script src="/Frontend/Backoffice/Adaptado/controllers/controller_dashboard.js"></script>
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_menuLateral.js"></script>
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_logout.js"></script>
     <script>
       $(function () {
         /* ChartJS
