--- a/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
@@ -125,69 +125,80 @@
               </div>
               <br />
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao1Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Calendário de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao1Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Calendário de atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Calendário de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao2Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Calendário de atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Materiais de referência
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao3Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Materiais de referência
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção aparece sempre -->
               <div style="background-color: #606a85">
                 <li class="nav-item">
@@ -202,37 +213,42 @@
               </div>
               <br />
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-handshake"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Parceiros
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao2Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon fas fa-handshake"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Parceiros
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-comment-dots"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Sugestões
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao3Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon fas fa-comment-dots"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Sugestões
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
@@ -993,12 +1009,10 @@
       <!-- /.modal -->
 
       <footer class="main-footer">
-        <div class="float-right d-none d-sm-block"><b>Version</b> 3.1.0-rc</div>
         <strong
-          >Copyright &copy; 2014-2020
-          <a href="https://adminlte.io">AdminLTE.io</a>.</strong
-        >
-        All rights reserved.
+          >Copyright &copy;
+          <a href="http://prochildcolab.pt/">ProChild</a></strong
+        >. Todos os direitos reservados.
       </footer>
 
       <!-- Control Sidebar -->
@@ -1019,7 +1033,5 @@
     <script src="../../dist/js/demo.js"></script>
     <!-- Controller -->
     <script src="/Frontend/Backoffice/Adaptado/controllers/controller_historico.js"></script>
-    <!-- bs-custom-file-input -->
-    <script src="/Frontend/Backoffice/Adaptado/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
   </body>
 </html>
