--- a/Frontend/Backoffice/Adaptado/pages/examples/profile.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/profile.html
@@ -124,69 +124,79 @@
               </div>
               <br />
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao1Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Calendário de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao1Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Calendário de atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Calendário de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao2Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Calendário de atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Materiais de referência
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao3Camaras">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Materiais de referência
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
@@ -204,37 +214,43 @@
               </div>
               <br />
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-handshake"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Parceiros
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao2Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon fas fa-handshake"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Parceiros
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-comment-dots"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Sugestões
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
+              <section id="opcao3Instituicoes">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon fas fa-comment-dots"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Sugestões
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+                <br />
+              </section>
+
               <!-- esta opção aparece sempre -->
               <div style="background-color: #606a85">
                 <li class="nav-item">
@@ -313,7 +329,7 @@
                                 type="email"
                                 class="form-control"
                                 id="inputName"
-                                value="test"
+                                value=""
                                 readonly
                               />
                             </div>
@@ -330,7 +346,7 @@
                                 class="form-control"
                                 id="inputName2"
                                 readonly
-                                value="Guimarães"
+                                value=""
                               />
                             </div>
                           </div>
@@ -346,7 +362,7 @@
                                 class="form-control"
                                 id="inputEmail"
                                 readonly
-                                value="emailGuimarães@cmg.pt"
+                                value=""
                               />
                             </div>
                           </div>
@@ -398,7 +414,7 @@
             <div class="modal-body">
               <form
                 method="PUT"
-                action="http://localhost:8080/DAI_backend/update_institution"
+                action="http://localhost:8080/DAI_backend/update_user"
               >
                 <div class="input-group mb-3">
                   <input
@@ -449,12 +465,10 @@
       <!-- /.modal -->
 
       <footer class="main-footer">
-        <div class="float-right d-none d-sm-block"><b>Version</b> 3.1.0-rc</div>
         <strong
-          >Copyright &copy; 2014-2020
-          <a href="https://adminlte.io">AdminLTE.io</a>.</strong
-        >
-        All rights reserved.
+          >Copyright &copy;
+          <a href="http://prochildcolab.pt/">ProChild</a></strong
+        >. Todos os direitos reservados.
       </footer>
 
       <!-- Control Sidebar -->
@@ -475,6 +489,7 @@
     <script src="../../dist/js/demo.js"></script>
     <!-- Controllers -->
     <script src="/Frontend/Backoffice/Adaptado/controllers/controller_perfil.js"></script>
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_menuLateral.js"></script>
 
     <script>
       function verPass() {
@@ -506,6 +521,7 @@
           return false;
         }
         btnSubmit.type = "Submit";
+        alterarPass();
         return true;
       }
     </script>
