--- a/Frontend/Backoffice/Adaptado/pages/calendar.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar.html
@@ -488,7 +488,12 @@
                 <div class="form-row">
                   <div class="form-group col-md-8">
                     <label for="nomeDaAtividade">Nome da atividade</label>
-                    <input type="text" class="form-control" id="nomeDaAtividade" value=""/>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="nomeDaAtividade"
+                      value=""
+                    />
                   </div>
                   <div class="form-group col-md-4">
                     <label for="cidadeDaAtividade">Cidade</label>
@@ -576,12 +581,10 @@
       <!-- /.modal -->
 
       <footer class="main-footer">
-        <div class="float-right d-none d-sm-block"><b>Version</b> 3.1.0-rc</div>
         <strong
-          >Copyright &copy; 2014-2020
-          <a href="https://adminlte.io">AdminLTE.io</a>.</strong
-        >
-        All rights reserved.
+          >Copyright &copy;
+          <a href="http://prochildcolab.pt/">ProChild</a></strong
+        >. Todos os direitos reservados.
       </footer>
 
       <!-- Control Sidebar -->
