--- a/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html
@@ -799,12 +799,10 @@
       <!-- /.modal -->
 
       <footer class="main-footer">
-        <div class="float-right d-none d-sm-block"><b>Version</b> 3.1.0-rc</div>
         <strong
-          >Copyright &copy; 2014-2020
-          <a href="https://adminlte.io">AdminLTE.io</a>.</strong
-        >
-        All rights reserved.
+          >Copyright &copy;
+          <a href="http://prochildcolab.pt/">ProChild</a></strong
+        >. Todos os direitos reservados.
       </footer>
 
       <!-- Control Sidebar -->
